--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "dotenv": "^4.0.0",
     "express": "^4.13.3",
-    "request": "^2.81.0"
+    "request": "^2.81.0",
+    "websocket": "^1.0.25"
   }
 }
