--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "docker_web_app",
+  "name": "slackipedia",
   "version": "1.0.0",
-  "description": "Node.js on Docker",
-  "author": "First Last <first.last@example.com>",
+  "description": "Slackipedia Node.js app",
+  "author": "Aaron Sykes <aaron@aaronsykes.com>",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
