Add duckduckgo search functionality (#5)
* Add node-duckduckgo package
* Basic socket message parsing, and duckduckgo query working
* Basic duckduckgo functionality working for certain search terms
* Remove swap file ignore

--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "dotenv": "^4.0.0",
     "express": "^4.13.3",
+    "node-duckduckgo": "^1.0.5",
     "request": "^2.81.0",
+    "request-promise": "^4.2.2",
     "websocket": "^1.0.25"
   }
 }
